refactor tournament view